@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.novaplus" name="TV Nova" provider-name="archivczsk" version="3.7">
+<addon id="plugin.video.novaplus" name="TV Nova" provider-name="archivczsk" version="3.8">
 	<requires>
 		<import addon="enigma2.archivczsk" version="2.6.0"/>
 		<import addon="tools.archivczsk" version="1.31" />
